2001-12-06  Cristy  <cristy@mystic.es.dupont.com>
	* Stream buffer was not being freed in ReadStream().

2001-12-05  Cristy  <cristy@mystic.es.dupont.com>
	* Corrected bias when downsizing an image with ResizeImage().

2001-11-25  Cristy  <cristy@mystic.es.dupont.com>
	* AcquireImagePixels() can accept (x,y) outside the image area
	  (e.g. AcquireImagePixels(image,-3,-3,7,7,exception)).

2001-11-22  Cristy  <cristy@mystic.es.dupont.com>
	* Added limited SVG gradient support.

2001-11-21  Cristy  <cristy@mystic.es.dupont.com>
	* Added API method, PingBlob().

2001-11-14  Cristy  <cristy@mystic.es.dupont.com>
	* Moved a few pixel related defines (e.g. Downscale()) to a
	  corresponding method to enforce strong type checking at
	  compile time.

2001-11-12  Cristy  <cristy@mystic.es.dupont.com>
	* Previously ImageMagick did not write 8-bit ASCII PPM/PGM
	  files when QuantumDepth == 16.
	* Added 'id' as an image attribute in PerlMagick (returns
	  ImageMagick registry ID).

2001-11-10  Cristy  <cristy@mystic.es.dupont.com>
	* Added SVG pattern support.
	* Changed default background color to none.

2001-11-05  Cristy  <cristy@mystic.es.dupont.com>
	* Added -level to convert/mogrify (suggested by
	  mericson@phillynews.kom).

2001-11-04  Cristy  <cristy@mystic.es.dupont.com>
	* -shadow/-shade were not distiguished.

2001-11-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* PerlMagick/Makefile.PL.in: Install PerlMagick using
	  ImageMagick's configure prefix.

2001-11-02  Cristy  <cristy@mystic.es.dupont.com>
	* Typecast offset to unsigned long in coders/pdf.c.

2001-11-01  Cristy  <cristy@mystic.es.dupont.com>
	* Convert's -flatten, -average, etc. failed with an assert error.

2001-10-30  Cristy  <cristy@mystic.es.dupont.com>
	* Added support for On-the-air bitmap.

2001-09-29  Glenn  <glennrp@home.kom>
        * When the delay setting for an image is greater than 4cs,
          duplicate frames are inserted to achieve the desired delay